--- a/src/themes/OLH/assets/foundation-sites/scss/components/_top-bar.scss
+++ b/src/themes/OLH/assets/foundation-sites/scss/components/_top-bar.scss
@@ -44,10 +44,6 @@ $topbar-unstack-breakpoint: medium !default;
 
   padding: $topbar-padding;
 
-  &,
-  ul {
-    background-color: $topbar-background;
-  }
 
   // Check if $topbar-background is differnt from $topbar-background-submenu
   @if ($topbar-background != $topbar-submenu-background) {
